--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             color: #333;
         }
         header {
-            background-color: #007bff;
+            background-color: #A9E7FE;
             color: white;
             padding: 1.5rem 0;
             text-align: center;
@@ -36,7 +36,7 @@
             transition: color 0.3s;
         }
         nav a:hover {
-            color: #007bff;
+            color: #A9E7FE;
         }
         .container {
             width: 80%;
@@ -47,8 +47,8 @@
             border-radius: 8px;
         }
         h2 {
-            color: #007bff;
-            border-bottom: 2px solid #007bff;
+            color: #A9E7FE;
+            border-bottom: 2px solid #A9E7FE;
             padding-bottom: 0.5rem;
         }
         .project, .case-study {
@@ -71,8 +71,8 @@
 </head>
 <body>
     <header>
-        <h1>John Doe</h1>
-        <p>Data Scientist</p>
+        <h1>Dr Thomas G. Simpson</h1>
+        <p>Data Scientist/Machine Learning Engineer</p>
     </header>
     
     <nav>
@@ -86,17 +86,40 @@
     <div class="container">
         <section id="about">
             <h2>About Me</h2>
-            <p>Hello! I'm John Doe, a passionate data scientist with a background in computer science and statistics. I enjoy solving complex problems and uncovering insights from data.</p>
+            <p>Hello! I'm Thomas, a passionate data scientist with a background in computer engineering, statistics, machine learning, and biomedical research. I enjoy solving complex problems and uncovering insights from data. Will code for food.</p>
         </section>
 
         <section id="projects">
             <h2>Projects</h2>
             <div class="project">
-                <h3>Project 1: Predicting House Prices</h3>
-                <p><strong>Objective:</strong> Develop a model to predict house prices based on various features.</p>
-                <p><strong>Tools:</strong> Python, Pandas, scikit-learn, Matplotlib</p>
-                <p><strong>Description:</strong> This project involved cleaning the dataset, performing exploratory data analysis, feature engineering, and building multiple models including Linear Regression and Random Forest.</p>
-                <a href="https://github.com/johndoe/house-prices-prediction" target="_blank">GitHub Repository</a>
+                <h3>Project 1: Explaining Video Neural Networks with Genetic Algorithm</h3>
+                <p><strong>Objective:</strong> Develop an approach to explain video neural networks.</p>
+                <p><strong>Tools:</strong> Python, Pandas, scikit-learn, Matplotlib, explainable AI</p>
+                <p><strong>Description:</strong> This project involved developing an algorithm to explain the classifier decision. It was compared with xx and found to acheive good performance. </p>
+            </div>
+            <div class="project">
+                <h3>Project 2: Classifying Sleep in Parkinson's Patients using Deep Brain Stimulation and Machine Learning </h3>
+                <p><strong>Objective:</strong> To classify sleep in Parkinson's disease to better drive stimulation strategies patients (this will improve the quality of the therapy that patients receive). </p>
+                <p><strong>Tools:</strong> Python, Pandas, scikit-learn, Matplotlib, explainable AI</p>
+                <p><strong>Description:</strong> Building random forest, support vector, and logistic regression classifiers to distinguish between sleep and wakefulness. Models achieve an average accuracy of 95% and AUC of 99%, making them state of the art in the field! </p>
+            </div>
+            <div class="project">
+                <h3>Project 3: Using Deep Learning and Time Series Approaches to Predict Vehicle Trajectory</h3>
+                <p><strong>Objective:</strong> To predict the future location of a simulated vehicle.</p>
+                <p><strong>Tools:</strong> Python, Pandas, scikit-learn, Matplotlib, C#, Unity Game Engine</p>
+                <p><strong>Description:</strong> I built a driving simulator in Unity Game Engine using C#, and then ran a study with about 36 participants! It was great fun! After collecting the data I built LSTM, RNN, and GRU models to take the position of the vehicle and predict it's future location. I also used tradtional time series approaches such as Holt Winters model, SARIMAX, and VARIMAX, etc. Furthermore, I explained the behaviour of the models with statistical fault localisation. </p>
+            </div>
+            <div class="project">
+                <h3>Project 4: Using Deep Learning to Estimate Brain Activity from Muscle Activity</h3>
+                <p><strong>Objective:</strong> To predict brain activity based on muscle activity. </p>
+                <p><strong>Tools:</strong> Python, Pandas, scikit-learn, Matplotlib, MATLAB</p>
+                <p><strong>Description:</strong> Used CNN, RF, XGB, SVC, and others to estimate cortical electroencephalographic data based on electromyographic data from the forearm during a forearm stabilisation task.</p>
+            </div>
+            <div class="project">
+                <h3>Project 5: SLAM Robot </h3>
+                <p><strong>Objective:</strong> To develop an autonomous robot based on SLAM.</p>
+                <p><strong>Tools:</strong>Arduino (microcontroller), Embedded C, MATLAB</p>
+                <p><strong>Description:</strong> Developed a robotic platform based on a SICK laser scanner, Arduino, and laptop with MATLAB. The robot used a kalman filter to simultaneously localise and map it's location.</p>
             </div>
             <!-- Add more projects as needed -->
         </section>
