--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe | Data Science Portfolio</title>
+    <title>Thomas Simpson | Data Science Portfolio</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -73,6 +73,8 @@
     <header>
         <h1>Dr Thomas G. Simpson</h1>
         <p>Data Scientist/Machine Learning Engineer</p>
+        <p>University of Oxford</p>
+        <p>Will code for food</p>
     </header>
     
     <nav>
@@ -86,7 +88,8 @@
     <div class="container">
         <section id="about">
             <h2>About Me</h2>
-            <p>Hello! I'm Thomas, a passionate data scientist with a background in computer engineering, statistics, machine learning, and biomedical research. I enjoy solving complex problems and uncovering insights from data. Will code for food.</p>
+            <img src="path/to/profile.jpg" alt="Profile Picture" style="width: 150px; height: 150px; border-radius: 50%;">
+            <p>Hello! I'm Thomas, a passionate data scientist with a background in computer engineering, statistics, machine learning, and biomedical research. I enjoy solving complex problems and uncovering insights from data.</p>
         </section>
 
         <section id="projects">
