--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="container">
         <section id="about">
             <h2>About Me</h2>
-            <img src="path/to/profile.jpg" alt="Profile Picture" style="width: 150px; height: 150px; border-radius: 50%;">
+            <img src="tom-2.jpg" alt="Profile Picture" style="width: 150px; height: 150px; border-radius: 50%;">
             <p>Hello! I'm Thomas, a passionate data scientist with a background in computer engineering, statistics, machine learning, and biomedical research. I enjoy solving complex problems and uncovering insights from data.</p>
         </section>
 
