--- a/index.html
+++ b/index.html
@@ -71,10 +71,13 @@
 </head>
 <body>
     <header>
+        <img src="tom-2.jpg" alt="Profile Picture" style="width: auto; height: auto; border-radius: 50%;">
+        <div>
         <h1>Dr Thomas G. Simpson</h1>
         <p>Data Scientist/Machine Learning Engineer</p>
         <p>University of Oxford</p>
         <p>Will code for food</p>
+        </div>
     </header>
     
     <nav>
@@ -88,7 +91,6 @@
     <div class="container">
         <section id="about">
             <h2>About Me</h2>
-            <img src="tom-2.jpg" alt="Profile Picture" style="width: 150px; height: 150px; border-radius: 50%;">
             <p>Hello! I'm Thomas, a passionate data scientist with a background in computer engineering, statistics, machine learning, and biomedical research. I enjoy solving complex problems and uncovering insights from data.</p>
         </section>
 
