--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         header {
             background-color: #A9E7FE;
             color: white;
-            padding: 1.5rem 0;
+            padding: 1.5rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             text-align: center;
         }
         header h1 {
