--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
         header {
             background-color: #A9E7FE;
-            color: white;
+            color: #343a40;
             padding: 1.5rem;
             display: flex;
             align-items: center;
