--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Thomas Simpson | Data Science Portfolio</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f0f2f5;
@@ -94,7 +94,7 @@
     <div class="container">
         <section id="about">
             <h2>About Me</h2>
-            <p>Hello! I'm Thomas, a passionate data scientist with a background in computer engineering, statistics, machine learning, and biomedical research. I enjoy solving complex problems and uncovering insights from data.</p>
+            <p>Hello! I'm Thomas, a passionate data scientist currently working at the University of Oxford researching Parkinson's disease. I have a background in computer engineering, statistics, machine learning, and biomedical research. I enjoy solving problems like that time I built an automated robot with recursive estimation filters, or that other time I built machine learning algorithms to classify sleep in Parkinson's disease, improving existing therapy!</p>
         </section>
 
         <section id="projects">
