--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 
         <section id="contact">
             <h2>Contact</h2>
-            <p>Email: johndoe@example.com</p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/johndoe" target="_blank">linkedin.com/in/johndoe</a></p>
+            <p>Email: tsimpson07@qub.ac.uk</p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/thomas-g-simpson-68363b181/" target="_blank">https://www.linkedin.com/in/thomas-g-simpson-68363b181/</a></p>
         </section>
     </div>
 
