--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thomas Simpson | Data Science Portfolio</title>
+    <title>Thomas G. Simpson | Data Science Portfolio</title>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -102,8 +102,8 @@
                 <h3>Project 1: Explaining Video Neural Networks with Genetic Algorithm</h3>
                 <p><strong>Objective:</strong> Develop an approach to explain video neural networks.</p>
                 <p><strong>Tools:</strong> Python, Pandas, scikit-learn, Matplotlib, explainable AI</p>
-                <p><strong>Description:</strong> This project involved developing an algorithm to explain the classifier decision. It was compared with xx and found to acheive good performance. </p>
-                <p><img src="GA_overview.png" alt="Project1 Picture" style="width: 1500px; height: auto;"></p>
+                <p><strong>Description:</strong> This project involved developing an algorithm to explain the classifier decision. This approach achieved high levels of performance on certain metrics. </p>
+                <p><img src="GA_overview.png" alt="Project1 Picture" style="width: 100%; height: auto; max-width: 100%;"></p>
             </div>
             <div class="project">
                 <h3>Project 2: Classifying Sleep in Parkinson's Patients using Deep Brain Stimulation and Machine Learning </h3>
@@ -139,7 +139,6 @@
                 <p><strong>Objective:</strong> Analyze customer data to identify factors contributing to churn and develop a predictive model.</p>
                 <p><strong>Tools:</strong> Python, Pandas, scikit-learn, Seaborn</p>
                 <p><strong>Description:</strong> Conducted detailed analysis on customer data, visualized churn factors, and implemented a classification model to predict churn probability.</p>
-                <a href="https://github.com/johndoe/customer-churn-analysis" target="_blank">GitHub Repository</a>
             </div>
             <!-- Add more case studies as needed -->
         </section>
@@ -147,24 +146,24 @@
         <section id="skills">
             <h2>Skills</h2>
             <ul>
-                <li>Programming Languages: Python, R, SQL</li>
-                <li>Data Manipulation: Pandas, dplyr</li>
-                <li>Machine Learning: scikit-learn, TensorFlow, Keras</li>
-                <li>Data Visualization: Matplotlib, Seaborn, Tableau</li>
-                <li>Database Management: SQL, NoSQL</li>
-                <li>Big Data Technologies: Hadoop, Spark</li>
+                <li>Working Programming Languages: Python, C++, MATLAB</li>
+                <li>Have worked with previously: Embedded C, C#, Unity Game Engine, HTML/CSS, Java, R</li>
+                <li>Data Manipulation: Pandas, numpy</li>
+                <li>Machine Learning: scikit-learn, TensorFlow, PyTorch, Keras</li>
+                <li>Data Visualization: Matplotlib, Seaborn</li>
+                <li>Database Management: SQL</li>
             </ul>
         </section>
 
         <section id="contact">
             <h2>Contact</h2>
             <p>Email: tsimpson07@qub.ac.uk</p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/thomas-g-simpson-68363b181/" target="_blank">https://www.linkedin.com/in/thomas-g-simpson-68363b181/</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/thomas-g-simpson-68363b181/" target="_blank">/linkedin/thomasgsimpson</a></p>
         </section>
     </div>
 
     <footer>
-        <p>&copy; 2024 John Doe</p>
+        <p>&copy; 2024 Thomas G. Simpson</p>
     </footer>
 </body>
 </html>
