--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="container">
         <section id="about">
             <h2>About Me</h2>
-            <p>Hello! I'm Thomas, a passionate data scientist currently working at the University of Oxford researching Parkinson's disease. I have a background in computer engineering, statistics, machine learning, and biomedical research. I enjoy solving problems like that time I built an automated robot with recursive estimation filters, or that other time I built machine learning algorithms to classify sleep in Parkinson's disease, improving existing therapy!</p>
+            <p>Hello! I'm Thomas, a passionate data scientist currently working at the University of Oxford researching Parkinson's disease. I have a background in computer engineering, statistics, machine learning, and biomedical research. I enjoy solving problems like that time I built an automated robot with recursive estimation filters, or that other time I built machine learning algorithms to classify sleep in Parkinson's disease to improve existing therapy!</p>
         </section>
 
         <section id="projects">
@@ -107,20 +107,20 @@
             </div>
             <div class="project">
                 <h3>Project 2: Classifying Sleep in Parkinson's Patients using Deep Brain Stimulation and Machine Learning </h3>
-                <p><strong>Objective:</strong> To classify sleep in Parkinson's disease to better drive stimulation strategies patients (this will improve the quality of the therapy that patients receive). </p>
-                <p><strong>Tools:</strong> Python, Pandas, scikit-learn, Matplotlib, explainable AI</p>
+                <p><strong>Objective:</strong> To classify sleep in Parkinson's disease to better drive stimulation strategies patients (this will improve the quality of the therapy that patients receive). This work is awaiting publication and will be updated accordingly!</p>
+                <p><strong>Tools:</strong> Python, Pandas, scikit-learn, Matplotlib, MATLAB</p>
                 <p><strong>Description:</strong> Building random forest, support vector, and logistic regression classifiers to distinguish between sleep and wakefulness. Models achieve an average accuracy of 95% and AUC of 99%, making them state of the art in the field! </p>
             </div>
             <div class="project">
                 <h3>Project 3: Using Deep Learning and Time Series Approaches to Predict Vehicle Trajectory</h3>
                 <p><strong>Objective:</strong> To predict the future location of a simulated vehicle.</p>
-                <p><strong>Tools:</strong> Python, Pandas, scikit-learn, Matplotlib, C#, Unity Game Engine</p>
+                <p><strong>Tools:</strong> Python, Tensorflow, Pandas, scikit-learn, Matplotlib, C#, Unity Game Engine</p>
                 <p><strong>Description:</strong> I built a driving simulator in Unity Game Engine using C#, and then ran a study with about 36 participants! It was great fun! After collecting the data I built LSTM, RNN, and GRU models to take the position of the vehicle and predict it's future location. I also used tradtional time series approaches such as Holt Winters model, SARIMAX, and VARIMAX, etc. Furthermore, I explained the behaviour of the models with statistical fault localisation. </p>
             </div>
             <div class="project">
                 <h3>Project 4: Using Deep Learning to Estimate Brain Activity from Muscle Activity</h3>
                 <p><strong>Objective:</strong> To predict brain activity based on muscle activity. </p>
-                <p><strong>Tools:</strong> Python, Pandas, scikit-learn, Matplotlib, MATLAB</p>
+                <p><strong>Tools:</strong> Python, Tensorflow, Pandas, scikit-learn, Matplotlib, MATLAB</p>
                 <p><strong>Description:</strong> Used CNN, RF, XGB, SVC, and others to estimate cortical electroencephalographic data based on electromyographic data from the forearm during a forearm stabilisation task.</p>
             </div>
             <div class="project">
@@ -133,14 +133,19 @@
         </section>
 
         <section id="case-studies">
-            <h2>Case Studies</h2>
+            <h2>Data Analysis/Research</h2>
             <div class="case-study">
-                <h3>Case Study 1: Customer Churn Analysis</h3>
-                <p><strong>Objective:</strong> Analyze customer data to identify factors contributing to churn and develop a predictive model.</p>
-                <p><strong>Tools:</strong> Python, Pandas, scikit-learn, Seaborn</p>
-                <p><strong>Description:</strong> Conducted detailed analysis on customer data, visualized churn factors, and implemented a classification model to predict churn probability.</p>
+                <h3>Study 1: Beta Oscillations Promote Muscle Coherence</h3>
+                <p><strong>Objective:</strong> To better understand the role of beta oscillations (these are associated with symptoms in Parkinson's disease). This work is (also) awaiting publication and will be updated accordingly!</p>
+                <p><strong>Tools:</strong> MATLAB, KINARM Robot</p>
+                <p><strong>Description:</strong> Conducted detailed analysis and found that beta oscillations result in an increase in inter-muscular coherence. Rigidity and bradykinesia (slowness of movement) are hallmark symptoms of Parkinson's disease, and this analysis suggests these are partly explained by the increase of beta oscillations.</p>
             </div>
-            <!-- Add more case studies as needed -->
+            <div class="case-study">
+                <h3>Study 2: Gait Analysis in Parkinson's Disease</h3>
+                <p><strong>Objective:</strong> To investigate the pathophysiology of gait in Parkinson's patient.</p>
+                <p><strong>Tools:</strong> MATLAB, some lovely and helpful PD patients</p>
+                <p><strong>Description:</strong> Work is currently being conducted.</p>
+            </div>
         </section>
 
         <section id="skills">
